# AgenticAI

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
LanggraphTools/: basic_chatbot.ipynb  chatbotmultipletools.ipynb
langchainbasics/: langchainbasics.ipynb
task1/: README.md  main.py  task_1.ipynb
task2/: README.md  app.py  task_2.ipynb
